<resources>
    <string name="app_name">Grokim Kartu</string>

    <!--    Login-->
    <string name="login_welcome">Grokim Kartu</string>
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_register">Registration</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_policy_and_terms">By creating an account you agree to Grokim Kartu Privacy Policy and Terms of use</string>
    <string name="login_incorrect_usr_name_or_psw_error">Invalid login credentials</string>
    <string name="login_too_many_requests_error">Too many requests. Try again later.</string>
    <string name="login_email_not_verified_error">Email address is not confirmed</string>

    <!--    Registration-->
    <string name="registration_registration_text">Registration</string>
    <string name="registration_name">Name</string>
    <string name="registration_email">Email address</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_repeat">Repeat password</string>
    <string name="registration_name_description">Name must not exceed 20 symbols.</string>
    <string name="registration_password_description">Password must contain at least 6 and no more than 35 symbols.</string>
    <string name="registration_register_button">Register</string>
    <string name="registration_email_verification_description">A confirmation link has been sent to your email address</string>
    <string name="registration_email_already_exists_error">This email address is already being used</string>
    <string name="registration_email_incorrect_format_error">Invalid email address format</string>
    <string name="registration_email_password_too_weak_error">Provided password is too weak</string>
    <string name="registration_registration_successful">You have successfully registered. A confirmation email address has been sent.</string>
    <string name="registration_ok_button">OK</string>
    <string name="registration_resend_button">Resend</string>

    <!--    Forgot Password-->
    <string name="forgot_password_title">Reset password</string>
    <string name="forgot_password_description">Enter email address to reset your password.</string>
    <string name="forgot_password_email">Email address</string>
    <string name="forgot_password_reset">Reset</string>
    <string name="forgot_password_ok_button">OK</string>
    <string name="forgot_password_email_sent">A password reset email has been sent.</string>

    <!--    Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_conversations">Conversations</string>
    <string name="menu_profile">Account</string>
    <string name="menu_settings">Settings</string>

    <!--    Notifications-->
    <string name="notifications_title">Notifications</string>

    <!--    Bottom Dialog-->
    <string name="bottom_dialog_search">Search</string>
    <string name="bottom_dialog_amount">Amount (€)</string>
    <string name="bottom_dialog_save_button">Save</string>
    <string name="bottom_dialog_cancel_button">Cancel</string>

    <!--    Dialog-->
    <string name="dialog_network_lost_text">There is no Internet Connection</string>

    <!--    Home-->
    <string name="home_players">People</string>
    <string name="home_players_description">Find like-minded musicians</string>
    <string name="home_thomanns">Thomanns</string>
    <string name="home_thomanns_description">Cooperate on Thomann order</string>

    <!--    Players-->
    <string name="players_title">People</string>
    <string name="players_filter_button">Search</string>
    <string name="player_details_report">Report</string>
    <string name="player_details_name">Name</string>
    <string name="player_details_instrument">Instrument</string>
    <string name="player_details_description">Introduction</string>
    <string name="player_details_city">City</string>
    <string name="player_details_message">Conversation</string>

    <!--    Players Filter-->
    <string name="players_filter_title">Search</string>
    <string name="players_filter_text">Text</string>
    <string name="players_filter_city">City</string>
    <string name="players_filter_instrument">Instrument</string>
    <string name="players_filter_apply">Apply</string>
    <string name="players_filter_clear">Clear</string>

    <!--    Thomanns-->
    <string name="thomanns_title">Thomann</string>
    <string name="thomanns_all_thomanns_title">All</string>
    <string name="thomanns_my_thomanns_title">My</string>
    <string name="thomanns_unknown_user">Unknown User</string>
    <string name="thomanns_filter_button">Search</string>
    <string name="thomann_details_title">Thomann</string>
    <string name="thomann_details_name">Coordinator</string>
    <string name="thomann_details_city">City</string>
    <string name="thomann_details_status">Status</string>
    <string name="thomann_details_status_locked">Locked</string>
    <string name="thomann_details_status_unlocked">Unlocked</string>
    <string name="thomann_details_creation_date">Created on</string>
    <string name="thomann_details_valid_until">Valid until</string>
    <string name="thomann_details_join">Join</string>
    <string name="thomann_details_leave">Leave</string>
    <string name="thomann_details_leave_confirmation_text">Do you really want to leave?</string>
    <string name="thomann_details_leave_confirmation_positive">Yes</string>
    <string name="thomann_details_leave_confirmation_negative">Cancel</string>
    <string name="thomann_details_kick">Kick</string>
    <string name="thomann_details_kick_confirmation_text">Do you really want to kick {{userName}}?</string>
    <string name="thomann_details_kick_confirmation_positive">Yes</string>
    <string name="thomann_details_kick_confirmation_negative">Cancel</string>
    <string name="thomann_details_user_amount">Amount: {{amount}}</string>
    <string name="thomann_details_user_join_date">Joined: {{joinDate}}</string>
    <string name="thomann_details_total_amount">Total amount</string>
    <string name="thomann_details_cancel">Cancel</string>
    <string name="thomann_details_cancel_confirmation_text">Do you really want to cancel?</string>
    <string name="thomann_details_cancel_confirmation_positive">Yes</string>
    <string name="thomann_details_cancel_confirmation_negative">Return</string>
    <string name="thomann_details_edit">Edit</string>
    <string name="thomann_details_join_dialog_title">Amount</string>
    <string name="thomann_details_post_message">Conversation</string>
    <string name="thomanns_add_new_button">Create</string>
    <string name="thomann_edit_title">Edit</string>
    <string name="thomann_edit_city">City</string>
    <string name="thomann_edit_valid_until">Valid until</string>
    <string name="thomann_edit_save">Save</string>
    <string name="thomann_edit_navigate_back_confirmation_text">There are unsaved changes. Do you really want to return?</string>
    <string name="thomann_edit_navigate_back_confirmation_positive">Yes</string>
    <string name="thomann_edit_navigate_back_confirmation_negative">Cancel</string>

    <!--    Thomanns Filter-->
    <string name="thomanns_filter_title">Search</string>
    <string name="thomanns_filter_city">City</string>
    <string name="thomanns_filter_valid_until">Valid until</string>
    <string name="thomanns_filter_show_only_unlocked">Show only unlocked</string>

    <!--    Conversations-->
    <string name="conversation_title">Conversation</string>
    <string name="conversations_title">Conversations</string>
    <string name="conversations_post_message">Message</string>
    <string name="conversations_private_title">Private</string>
    <string name="conversations_thomann_title">Thomann</string>
    <string name="conversations_you">You</string>
    <string name="conversation_unknown_user">Unknown User</string>

    <!--    Profile-->
    <string name="profile_fragment">Account</string>
    <string name="profile_name">Name</string>
    <string name="profile_instrument">Instrument</string>
    <string name="profile_description">Introduction</string>
    <string name="profile_city">City</string>
    <string name="profile_edit_fragment">Edit</string>
    <string name="profile_edit_button">Edit</string>
    <string name="profile_edit_name">Name</string>
    <string name="profile_edit_instrument">Instrument</string>
    <string name="profile_edit_city">City</string>
    <string name="profile_edit_description">Introduction</string>
    <string name="profile_edit_save">Save</string>
    <string name="profile_edit_chooser_title">Choose a photo</string>
    <string name="profile_edit_navigate_back_confirmation_text">There are unsaved changes. Do you really want to return?</string>
    <string name="profile_edit_navigate_back_confirmation_positive">Yes</string>
    <string name="profile_edit_navigate_back_confirmation_negative">Cancel</string>

    <!--    Settings-->
    <string name="settings_fragment">Settings</string>
    <string name="settings_email">Email address</string>
    <string name="settings_show_me_in_list">Show me on the list</string>
    <string name="settings_enable_push_notifications">Enable Push Notifications</string>
    <string name="settings_language">Language</string>
    <string name="settings_ui_mode">User interface</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_delete_user">Delete my account</string>
    <string name="settings_logout">Logout</string>

    <!--    Language-->
    <string name="languages_title">Language</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_lt" translatable="false">Lietuvių</string>

    <!--    Settings-->
    <string name="theme_mode_title">User interface</string>
    <string name="theme_mode_light">Light</string>
    <string name="theme_mode_dark">Dark</string>
    <string name="theme_mode_device">Device mode</string>

    <!--    Delete User-->
    <string name="delete_user_title">Delete my account</string>
    <string name="delete_user_password">Password</string>
    <string name="delete_user_delete_button">Delete</string>

    <!--    Password Change-->
    <string name="password_change_ok_button">OK</string>
    <string name="password_change_title">Change password</string>
    <string name="password_change_old_password">Old password</string>
    <string name="password_change_new_password">New password</string>
    <string name="password_change_repeat_password">Repeat new password</string>
    <string name="password_change_change_button">Change</string>
    <string name="password_change_invalid_password_error">Incorrect password</string>
    <string name="password_change_old_and_new_password_must_not_be_the_same_error">Old and new passwords must not be the same</string>
    <string name="password_change_new_and_repeat_password_are_not_the_same_error">Repeated password do not match</string>
    <string name="password_change_password_changed_successfully">Password changed successfully</string>
</resources>