<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:title="@string/menu_home"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/conversations"
        android:title="@string/menu_conversations"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_conversations"/>

    <item android:id="@+id/profile"
        android:title="@string/menu_profile"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="4"
        android:title="@string/menu_settings"
        app:showAsAction="always" />
</menu>