<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.dauma.grokimkartu.viewmodels.main.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/profileScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="0dp"
                android:orientation="vertical">

                <com.dauma.grokimkartu.ui.viewelements.CardViewElement
                    android:id="@+id/playersCardViewElement"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardTitle="@string/home_players"
                    app:cardDescription="@string/home_players_description"
                    app:cardStartColor="?attr/card1StartColor"
                    app:cardEndColor="?attr/card1EndColor" />

                <com.dauma.grokimkartu.ui.viewelements.CardViewElement
                    android:id="@+id/thomannCardViewElement"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardTitle="@string/home_thomanns"
                    app:cardDescription="@string/home_thomanns_description"
                    app:cardStartColor="?attr/card2StartColor"
                    app:cardEndColor="?attr/card2EndColor" />

            </LinearLayout>
        </ScrollView>

        <com.dauma.grokimkartu.ui.viewelements.HeaderViewElement
            android:id="@+id/homeHeaderViewElement"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:showBottomBorder="false"
            app:showIcon="true"
            app:headerType="standart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>