<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.dauma.grokimkartu.viewmodels.main.ThemeModesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="0dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.dauma.grokimkartu.ui.viewelements.RowViewElement
                android:id="@+id/light_mode_row_view_element"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:row_title="@string/theme_mode_light"
                app:row_show_icon="false"
                app:row_borders="bottom"
                app:row_custom_icon="@drawable/ic_check"
                app:row_icon_tint_color="?attr/check_selected_color"
                app:row_icon_width="30dp"
                app:row_icon_height="30dp"
                app:onClick="@{() -> model.lightClicked()}" />

            <com.dauma.grokimkartu.ui.viewelements.RowViewElement
                android:id="@+id/dark_mode_row_view_element"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:row_title="@string/theme_mode_dark"
                app:row_show_icon="false"
                app:row_borders="bottom"
                app:row_custom_icon="@drawable/ic_check"
                app:row_icon_tint_color="?attr/check_selected_color"
                app:row_icon_width="30dp"
                app:row_icon_height="30dp"
                app:onClick="@{() -> model.darkClicked()}" />

            <com.dauma.grokimkartu.ui.viewelements.RowViewElement
                android:id="@+id/device_mode_row_view_element"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:row_title="@string/theme_mode_device"
                app:row_show_icon="false"
                app:row_borders="bottom"
                app:row_custom_icon="@drawable/ic_check"
                app:row_icon_tint_color="?attr/check_selected_color"
                app:row_icon_width="30dp"
                app:row_icon_height="30dp"
                app:onClick="@{() -> model.deviceClicked()}" />

        </LinearLayout>

        <com.dauma.grokimkartu.ui.viewelements.HeaderViewElement
            android:id="@+id/theme_modes_header_view_element"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:title="@string/theme_mode_title"
            app:show_bottom_border="true"
            app:show_icon="false"
            app:header_type="with_back"
            app:header_text_size="small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>