<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.dauma.grokimkartu.viewmodels.main.ThomannsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.dauma.grokimkartu.ui.viewelements.HeaderViewElement
            android:id="@+id/thomanns_header_view_element"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:title="@string/thomanns_title"
            app:show_bottom_border="false"
            app:show_icon="false"
            app:header_type="with_back"
            app:header_text_size="small"
            app:header_right_text="@string/thomanns_filter_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/thomanns_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/thomanns_header_view_element"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/thomanns_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/thomanns_tab_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_thomann_item_button" />

        <com.dauma.grokimkartu.ui.viewelements.ButtonViewElement
            android:id="@+id/create_thomann_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:type="primary"
            app:onClick="@{() -> model.createClicked()}"
            app:text="@string/thomanns_add_new_button"
            app:layout_constraintTop_toBottomOf="@id/thomanns_view_pager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

